fix: Fix bug where footer social media buttons overlapped with footer content making the buttons not clickable

--- a/css/styles.css
+++ b/css/styles.css
@@ -263,6 +263,7 @@ footer {
     font-size: 16px;
     font-weight: 900;
     color: rgb(84, 53, 186);
+    z-index: 1;
 }
 
 .footer-content a:visited {
@@ -279,6 +280,7 @@ footer {
     justify-content: center;
     width: 100%;
     margin: 24px 0px;
+    z-index: 0;
 }
 
 .footer-social-media img {
